--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 3px; }
       ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
     </style>
-    <!-- AMap Security Config MUST be before the script loading -->
+    <!-- AMap Security Config -->
     <script type="text/javascript">
       window._AMapSecurityConfig = {
         securityJsCode: 'cbcc337a1757db575f7f0844df6ba529',
@@ -36,5 +36,6 @@
 </head>
   <body class="bg-gray-50 text-slate-900 overflow-hidden">
     <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
