refactor: Update dependencies and Gemini integration
Replaces Doubao API integration with Google GenAI (Gemini). Updates project dependencies and configuration to reflect this change and prepare for production builds.

--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
     </script>
     <!-- AMap JS API -->
     <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=6ab790ad3d8fa4b582ce5e5ffef3b07b&plugin=AMap.ToolBar,AMap.Scale,AMap.Polyline,AMap.Marker,AMap.PlaceSearch,AMap.Geocoder"></script>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
